Added html particals

--- a/UI/mix-manifest.json
+++ b/UI/mix-manifest.json
@@ -1,46 +1,11 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/fonts/fontawesome/fa-brands-400.ttf": "/fonts/fontawesome/fa-brands-400.ttf",
-    "/fonts/fontawesome/fa-brands-400.woff2": "/fonts/fontawesome/fa-brands-400.woff2",
-    "/fonts/fontawesome/fa-regular-400.ttf": "/fonts/fontawesome/fa-regular-400.ttf",
-    "/fonts/fontawesome/fa-regular-400.woff2": "/fonts/fontawesome/fa-regular-400.woff2",
-    "/fonts/fontawesome/fa-solid-900.ttf": "/fonts/fontawesome/fa-solid-900.ttf",
-    "/fonts/fontawesome/fa-solid-900.woff2": "/fonts/fontawesome/fa-solid-900.woff2",
-    "/fonts/fontawesome/fa-v4compatibility.ttf": "/fonts/fontawesome/fa-v4compatibility.ttf",
-    "/fonts/fontawesome/fa-v4compatibility.woff2": "/fonts/fontawesome/fa-v4compatibility.woff2",
-    "/fonts/Inter/Inter-VariableFont_slnt,wght.ttf": "/fonts/Inter/Inter-VariableFont_slnt,wght.ttf",
-    "/fonts/Inter/OFL.txt": "/fonts/Inter/OFL.txt",
-    "/fonts/Inter/README.txt": "/fonts/Inter/README.txt",
-    "/fonts/Inter/static/Inter-Black.ttf": "/fonts/Inter/static/Inter-Black.ttf",
-    "/fonts/Inter/static/Inter-Bold.ttf": "/fonts/Inter/static/Inter-Bold.ttf",
-    "/fonts/Inter/static/Inter-ExtraBold.ttf": "/fonts/Inter/static/Inter-ExtraBold.ttf",
-    "/fonts/Inter/static/Inter-ExtraLight.ttf": "/fonts/Inter/static/Inter-ExtraLight.ttf",
-    "/fonts/Inter/static/Inter-Light.ttf": "/fonts/Inter/static/Inter-Light.ttf",
-    "/fonts/Inter/static/Inter-Medium.ttf": "/fonts/Inter/static/Inter-Medium.ttf",
-    "/fonts/Inter/static/Inter-Regular.ttf": "/fonts/Inter/static/Inter-Regular.ttf",
-    "/fonts/Inter/static/Inter-SemiBold.ttf": "/fonts/Inter/static/Inter-SemiBold.ttf",
-    "/fonts/Inter/static/Inter-Thin.ttf": "/fonts/Inter/static/Inter-Thin.ttf",
-    "/fonts/Poppins/OFL.txt": "/fonts/Poppins/OFL.txt",
-    "/fonts/Poppins/Poppins-Black.ttf": "/fonts/Poppins/Poppins-Black.ttf",
-    "/fonts/Poppins/Poppins-BlackItalic.ttf": "/fonts/Poppins/Poppins-BlackItalic.ttf",
-    "/fonts/Poppins/Poppins-Bold.ttf": "/fonts/Poppins/Poppins-Bold.ttf",
-    "/fonts/Poppins/Poppins-BoldItalic.ttf": "/fonts/Poppins/Poppins-BoldItalic.ttf",
-    "/fonts/Poppins/Poppins-ExtraBold.ttf": "/fonts/Poppins/Poppins-ExtraBold.ttf",
-    "/fonts/Poppins/Poppins-ExtraBoldItalic.ttf": "/fonts/Poppins/Poppins-ExtraBoldItalic.ttf",
-    "/fonts/Poppins/Poppins-ExtraLight.ttf": "/fonts/Poppins/Poppins-ExtraLight.ttf",
-    "/fonts/Poppins/Poppins-ExtraLightItalic.ttf": "/fonts/Poppins/Poppins-ExtraLightItalic.ttf",
-    "/fonts/Poppins/Poppins-Italic.ttf": "/fonts/Poppins/Poppins-Italic.ttf",
-    "/fonts/Poppins/Poppins-Light.ttf": "/fonts/Poppins/Poppins-Light.ttf",
-    "/fonts/Poppins/Poppins-LightItalic.ttf": "/fonts/Poppins/Poppins-LightItalic.ttf",
-    "/fonts/Poppins/Poppins-Medium.ttf": "/fonts/Poppins/Poppins-Medium.ttf",
-    "/fonts/Poppins/Poppins-MediumItalic.ttf": "/fonts/Poppins/Poppins-MediumItalic.ttf",
-    "/fonts/Poppins/Poppins-Regular.ttf": "/fonts/Poppins/Poppins-Regular.ttf",
-    "/fonts/Poppins/Poppins-SemiBold.ttf": "/fonts/Poppins/Poppins-SemiBold.ttf",
-    "/fonts/Poppins/Poppins-SemiBoldItalic.ttf": "/fonts/Poppins/Poppins-SemiBoldItalic.ttf",
-    "/fonts/Poppins/Poppins-Thin.ttf": "/fonts/Poppins/Poppins-Thin.ttf",
-    "/fonts/Poppins/Poppins-ThinItalic.ttf": "/fonts/Poppins/Poppins-ThinItalic.ttf",
-    "/hot": "/hot",
+    "/index.html": "/index.html",
+    "/AppComponents/html particals/bottomhandler.html": "/AppComponents/html particals/bottomhandler.html",
+    "/AppComponents/html particals/test.html": "/AppComponents/html particals/test.html",
+    "/AppComponents/html particals/tophandlers.html": "/AppComponents/html particals/tophandlers.html",
+    "/AppComponents/html particals/wrap.html": "/AppComponents/html particals/wrap.html",
     "/images/100x100.png": "/images/100x100.png",
     "/images/200x200.png": "/images/200x200.png",
     "/images/600x400.png": "/images/600x400.png",
@@ -146,12 +111,43 @@
     "/images/payments/cc-mastercard.svg": "/images/payments/cc-mastercard.svg",
     "/images/payments/cc-visa-white.svg": "/images/payments/cc-visa-white.svg",
     "/images/payments/cc-visa.svg": "/images/payments/cc-visa.svg",
-    "/index.html": "/index.html",
-    "/js/app.js.LICENSE.txt": "/js/app.js.LICENSE.txt",
-    "/js/dabar.json": "/js/dabar.json",
-    "/js/htmx.min.js": "/js/htmx.min.js",
-    "/js/lottie-player.js": "/js/lottie-player.js",
-    "/js/smile.json": "/js/smile.json",
-    "/mix-manifest.json": "/mix-manifest.json",
-    "/Test": "/Test"
+    "/fonts/fontawesome/fa-brands-400.ttf": "/fonts/fontawesome/fa-brands-400.ttf",
+    "/fonts/fontawesome/fa-brands-400.woff2": "/fonts/fontawesome/fa-brands-400.woff2",
+    "/fonts/fontawesome/fa-regular-400.ttf": "/fonts/fontawesome/fa-regular-400.ttf",
+    "/fonts/fontawesome/fa-regular-400.woff2": "/fonts/fontawesome/fa-regular-400.woff2",
+    "/fonts/fontawesome/fa-solid-900.ttf": "/fonts/fontawesome/fa-solid-900.ttf",
+    "/fonts/fontawesome/fa-solid-900.woff2": "/fonts/fontawesome/fa-solid-900.woff2",
+    "/fonts/fontawesome/fa-v4compatibility.ttf": "/fonts/fontawesome/fa-v4compatibility.ttf",
+    "/fonts/fontawesome/fa-v4compatibility.woff2": "/fonts/fontawesome/fa-v4compatibility.woff2",
+    "/fonts/Inter/Inter-VariableFont_slnt,wght.ttf": "/fonts/Inter/Inter-VariableFont_slnt,wght.ttf",
+    "/fonts/Inter/OFL.txt": "/fonts/Inter/OFL.txt",
+    "/fonts/Inter/README.txt": "/fonts/Inter/README.txt",
+    "/fonts/Inter/static/Inter-Black.ttf": "/fonts/Inter/static/Inter-Black.ttf",
+    "/fonts/Inter/static/Inter-Bold.ttf": "/fonts/Inter/static/Inter-Bold.ttf",
+    "/fonts/Inter/static/Inter-ExtraBold.ttf": "/fonts/Inter/static/Inter-ExtraBold.ttf",
+    "/fonts/Inter/static/Inter-ExtraLight.ttf": "/fonts/Inter/static/Inter-ExtraLight.ttf",
+    "/fonts/Inter/static/Inter-Light.ttf": "/fonts/Inter/static/Inter-Light.ttf",
+    "/fonts/Inter/static/Inter-Medium.ttf": "/fonts/Inter/static/Inter-Medium.ttf",
+    "/fonts/Inter/static/Inter-Regular.ttf": "/fonts/Inter/static/Inter-Regular.ttf",
+    "/fonts/Inter/static/Inter-SemiBold.ttf": "/fonts/Inter/static/Inter-SemiBold.ttf",
+    "/fonts/Inter/static/Inter-Thin.ttf": "/fonts/Inter/static/Inter-Thin.ttf",
+    "/fonts/Poppins/OFL.txt": "/fonts/Poppins/OFL.txt",
+    "/fonts/Poppins/Poppins-Black.ttf": "/fonts/Poppins/Poppins-Black.ttf",
+    "/fonts/Poppins/Poppins-BlackItalic.ttf": "/fonts/Poppins/Poppins-BlackItalic.ttf",
+    "/fonts/Poppins/Poppins-Bold.ttf": "/fonts/Poppins/Poppins-Bold.ttf",
+    "/fonts/Poppins/Poppins-BoldItalic.ttf": "/fonts/Poppins/Poppins-BoldItalic.ttf",
+    "/fonts/Poppins/Poppins-ExtraBold.ttf": "/fonts/Poppins/Poppins-ExtraBold.ttf",
+    "/fonts/Poppins/Poppins-ExtraBoldItalic.ttf": "/fonts/Poppins/Poppins-ExtraBoldItalic.ttf",
+    "/fonts/Poppins/Poppins-ExtraLight.ttf": "/fonts/Poppins/Poppins-ExtraLight.ttf",
+    "/fonts/Poppins/Poppins-ExtraLightItalic.ttf": "/fonts/Poppins/Poppins-ExtraLightItalic.ttf",
+    "/fonts/Poppins/Poppins-Italic.ttf": "/fonts/Poppins/Poppins-Italic.ttf",
+    "/fonts/Poppins/Poppins-Light.ttf": "/fonts/Poppins/Poppins-Light.ttf",
+    "/fonts/Poppins/Poppins-LightItalic.ttf": "/fonts/Poppins/Poppins-LightItalic.ttf",
+    "/fonts/Poppins/Poppins-Medium.ttf": "/fonts/Poppins/Poppins-Medium.ttf",
+    "/fonts/Poppins/Poppins-MediumItalic.ttf": "/fonts/Poppins/Poppins-MediumItalic.ttf",
+    "/fonts/Poppins/Poppins-Regular.ttf": "/fonts/Poppins/Poppins-Regular.ttf",
+    "/fonts/Poppins/Poppins-SemiBold.ttf": "/fonts/Poppins/Poppins-SemiBold.ttf",
+    "/fonts/Poppins/Poppins-SemiBoldItalic.ttf": "/fonts/Poppins/Poppins-SemiBoldItalic.ttf",
+    "/fonts/Poppins/Poppins-Thin.ttf": "/fonts/Poppins/Poppins-Thin.ttf",
+    "/fonts/Poppins/Poppins-ThinItalic.ttf": "/fonts/Poppins/Poppins-ThinItalic.ttf"
 }
