--- a/UI/mix-manifest.json
+++ b/UI/mix-manifest.json
@@ -2,10 +2,10 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/index.html": "/index.html",
-    "/AppComponents/html particals/bottomhandler.html": "/AppComponents/html particals/bottomhandler.html",
-    "/AppComponents/html particals/test.html": "/AppComponents/html particals/test.html",
-    "/AppComponents/html particals/tophandlers.html": "/AppComponents/html particals/tophandlers.html",
-    "/AppComponents/html particals/wrap.html": "/AppComponents/html particals/wrap.html",
+    "/AppComponents/HtmlParticles/bottomhandler.html": "/AppComponents/HtmlParticles/bottomhandler.html",
+    "/AppComponents/HtmlParticles/test.html": "/AppComponents/HtmlParticles/test.html",
+    "/AppComponents/HtmlParticles/tophandlers.html": "/AppComponents/HtmlParticles/tophandlers.html",
+    "/AppComponents/HtmlParticles/wrap.html": "/AppComponents/HtmlParticles/wrap.html",
     "/images/100x100.png": "/images/100x100.png",
     "/images/200x200.png": "/images/200x200.png",
     "/images/600x400.png": "/images/600x400.png",
